[package]
name = "sciter-rs"
version = "0.4.10"
description = "A Rust bindings for Sciter - Embeddable HTML/CSS/script engine (cross-platform desktop GUI toolkit)."
keywords = ["gui", "sciter", "html", "css", "web", "tiscript", "htmlayout", "cross-platform"]
categories = ["gui", "web-programming", "rendering::graphics-api", "api-bindings"]

authors = ["pravic <ehysta@gmail.com>"]
repository = "https://github.com/pravic/rust-sciter"
documentation = "http://pravic.github.io/rust-sciter"
readme = "README.md"
license = "MIT"

exclude = [".gitignore", "appveyor.yml"]


[lib]
name = "sciter"
crate-type = ["rlib"]

[dependencies]
libc = "*"
lazy_static = "*"

[target.x86_64-apple-darwin.dependencies]
objc = "*"
objc-foundation = "*"

[[example]]
name = "first"
path = "examples/first.rs"

[[example]]
name = "minimal"
path = "examples/minimal.rs"

[[example]]
name = "download"
path = "examples/download.rs"

[[example]]
name = "dom"
path = "examples/dom.rs"

[[example]]
name = "fire_event"
path = "examples/fire_event.rs"

[[example]]
name = "interop"
path = "examples/interop.rs"


[badges]
appveyor = { repository = "pravic/rust-sciter" }
