[package]
name = "sciter-rs"
version = "0.4.24"
description = "Rust bindings for Sciter - Embeddable HTML/CSS/script engine (cross-platform desktop GUI toolkit). Also capable with DirectX / OpenGL."
keywords = ["gui", "gtk", "cocoa", "opengl", "skia"]
categories = ["gui", "web-programming", "rendering::graphics-api", "api-bindings"]

authors = ["pravic <ehysta@gmail.com>"]
repository = "https://github.com/sciter-sdk/rust-sciter"
documentation = "https://docs.rs/sciter-rs"
readme = "README.md"
license = "MIT"

exclude = [".gitignore", "appveyor.yml"]

[badges]
appveyor = { repository = "sciter-sdk/rust-sciter" }

[lib]
name = "sciter"
crate-type = ["rlib"]

[dependencies]
libc = "0.2"
lazy_static = "0.2"

[target.x86_64-apple-darwin.dependencies]
objc = "0.2"
objc-foundation = "0.1"

[[example]]
name = "first"
path = "examples/first.rs"

[[example]]
name = "minimal"
path = "examples/minimal.rs"

[[example]]
name = "download"
path = "examples/download.rs"

[[example]]
name = "dom"
path = "examples/dom.rs"

[[example]]
name = "fire_event"
path = "examples/fire_event.rs"

[[example]]
name = "interop"
path = "examples/interop.rs"
