[package]
name = "sciter-rs"
version = "0.5.45"
description = "Rust bindings for Sciter - Embeddable HTML/CSS/script engine (cross-platform desktop GUI toolkit). Also capable with DirectX / OpenGL."
keywords = ["gui", "gtk", "cocoa", "opengl", "skia"]
categories = ["gui", "web-programming", "rendering::graphics-api", "api-bindings"]

authors = ["pravic <ehysta@gmail.com>"]
repository = "https://github.com/sciter-sdk/rust-sciter"
documentation = "https://docs.rs/sciter-rs"
readme = "README.md"
license = "MIT"

exclude = [".gitignore", ".editorconfig", ".appveyor.yml", "clippy.toml"]

[badges]
appveyor = { repository = "sciter-sdk/rust-sciter" }
travis-ci = { repository = "sciter-sdk/rust-sciter" }

maintenance = { status = "passively-maintained" }

[workspace]
members = [".", "serde"]


[lib]
name = "sciter"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["dynamic"]
nightly = []
dynamic = []

[dependencies]
libc = "0.2"
lazy_static = "1.0"

[target.x86_64-apple-darwin.dependencies]
objc = "0.2"
objc-foundation = "0.1"


[[example]]
name = "first"
path = "examples/first.rs"

[[example]]
name = "minimal"
path = "examples/minimal.rs"

[[example]]
name = "download"
path = "examples/download.rs"

[[example]]
name = "dom"
path = "examples/dom.rs"

[[example]]
name = "fire_event"
path = "examples/fire_event.rs"

[[example]]
name = "interop"
path = "examples/interop.rs"

[[example]]
name = "threads"
path = "examples/threads.rs"

[[example]]
name = "archived"
path = "examples/archived.rs"

[[example]]
name = "video"
path = "examples/video.rs"

[[example]]
name = "clock"
path = "examples/clock.rs"
