[package]
name = "sciter-examples"
version = "0.1.1"
authors = ["pravic <ehysta@gmail.com>"]

[dependencies.sciter-rs]
path = "../"

[[bin]]
name = "first"
path = "first.rs"

[[bin]]
name = "minimal"
path = "minimal.rs"

[[bin]]
name = "download"
path = "download.rs"

[[bin]]
name = "interop"
path = "interop.rs"

[[bin]]
name = "dom"
path = "dom.rs"

[[bin]]
name = "fire_event"
path = "fire_event.rs"
