[package]
name = "serde_sciter"
version = "0.2.0"
description = "Serde support for Sciter engine."
keywords = ["serde", "gui", "gtk", "opengl", "skia"]
categories = ["gui", "web-programming", "rendering::graphics-api", "api-bindings"]

authors = ["pravic <ehysta@gmail.com>"]
repository = "https://github.com/sciter-sdk/rust-sciter"
documentation = "https://docs.rs/serde_sciter"
license = "MIT"

exclude = [".gitignore", ".editorconfig", ".appveyor.yml"]

[badges]
appveyor = { repository = "sciter-sdk/rust-sciter" }

[dependencies]
sciter-rs = { version = "0.5" }
serde = "1"

[dev-dependencies]
serde_derive = "1"
serde_bytes = "0.10"
